--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,7 +32,11 @@ Grey dark 3: #999
     --line: 1px solid var(--color-grey-light-2);
 }
 
-$bp-largest: 75rem; // 1200px/15
+$bp-largest: 75em; // 1200px/16
+$bp-large: 68.75em; // 1100px/16
+$bp-medium: 56.25em; // 1100px/16
+$bp-small: 37.5em; // 600px/16
+$bp-smallest: 31.25em; // 600px/16
 
 * {
     margin: 0;
@@ -48,6 +52,10 @@ $bp-largest: 75rem; // 1200px/15
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px => 10px(target default)/16px(browser default)
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
